--- a/style.css
+++ b/style.css
@@ -1,22 +1,5 @@
-/* .content{
-    width: 50%;
-    margin: 0 auto;
-} */
-.selections{
- list-style: none;
- border: solid 1px #ebebeb;
- padding: 13px;
- margin: 10px 0;
- font-weight: 600;
- cursor: pointer;
- box-shadow: 0 3px 2px -2px rgb(0 0 0 / 13%);
-}
-/* .element.style{
-    max-width: 500px;
-} */
-
 .wrapper{
-    max-width: 500px;
+    max-width: 50%;
     margin: 0 auto;
 }
 
@@ -29,4 +12,22 @@
     content: '';
 }
 
+.img{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.aaa{
+    padding-left: 0;
+}
     
+.selections{
+ list-style: none;
+ border: solid 1px #ebebeb;
+ padding: 13px;
+ margin: 10px 0;
+ font-weight: 600;
+ cursor: pointer;
+ box-shadow: 0 3px 2px -2px rgb(0 0 0 / 13%);
+}
