--- a/style.css
+++ b/style.css
@@ -31,3 +31,30 @@
  cursor: pointer;
  box-shadow: 0 3px 2px -2px rgb(0 0 0 / 13%);
 }
+
+.correctBox{
+    width:620px;
+    height: 60px;
+    background: #f5f5f5;
+    margin: auto;
+    padding: 20px;
+    display:none;
+}
+
+.correctTitle{
+    border-bottom: solid blue 3px;
+    padding-bottom: 6px;
+    display:none;
+    width: 50px;
+}
+
+.uncorrectTitle{
+    border-bottom: solid red 3px;
+    padding-bottom: 6px;
+    display:none;
+    width: 64px;
+}
+
+.cantclick{
+    pointer-events: none;
+}
