--- a/style.css
+++ b/style.css
@@ -33,12 +33,12 @@
 }
 
 .correctBox{
-    width:620px;
-    height: 60px;
+    width:100%;
     background: #f5f5f5;
     margin: auto;
     padding: 20px;
     display:none;
+    box-sizing: border-box;
 }
 
 .correctTitle{
